# profile-insight-api

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-ci.yml
app/: main.py
app/api/: routes.py
app/models/: models.py
app/prolog/: knowledge.prolog
app/schemas/: perfil_answer.py  perfil_answers.py
app/services/: prolog-service.py  prolog_service.py
