[tool.poetry]
name = "investor-profile-api"
version = "0.1.0"
description = ""
authors = ["PedroSmaxY <pedrohnovais@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
pyswip = {git = "https://github.com/ML-KULeuven/pyswip"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
